chore: add buyer and seller service

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,16 @@
-PORT=
-APP_NAME=
-NODE_ENV=
-CLIENT_URL=
-RABBITMQ_ENDPOINT=
-SENDER_EMAIL=
-SENDER_EMAIL_PASSWORD=
-ELASTIC_SEARCH_URL=
+PORT=5000
+APP_NAME=UsersService
+ENABLE_APM=0
+DATABASE_URL=mongodb://mongodb:27017/users
+GATEWAY_JWT_TOKEN=e547275ee6da18208eacb832ccd40726
+JWT_TOKEN=5f8fb3a2116420df5ba663a90ea81a96
+NODE_ENV=development
+AP_GATEWAY_URL=http://localhost:4000
+RABBITMQ_ENDPOINT=amqp://user:password@localhost:5672
+CLOUD_NAME=dxedpav4j
+CLOUD_API_KEY=187993728219966
+CLOUD_API_SECRET=NKX5qdWP07fzm2oYZFXZBOL71Zc
+REDIS_HOST=redis://localhost:6379
+ELASTIC_SEARCH_URL=http://user:password@localhost:9200
+ELASTIC_APM_SERVER_URL=http://user:password@localhost:9200
+ELASTIC_APM_SECRET_TOKEN=http://user:password@localhost:9200
