implement users message consumers and producers

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@elastic/elasticsearch": "^8.15.1",
+    "amqplib": "^0.10.4",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "compression": "^1.7.5",
@@ -39,6 +40,7 @@
     "winston-elasticsearch": "^0.19.0"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.5",
     "@types/bcrypt": "^5.0.2",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
