--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@elastic/elasticsearch": "^8.15.1",
+    "@faker-js/faker": "^9.2.0",
     "amqplib": "^0.10.4",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
